--- a/Tugas 1 HTML.html
+++ b/Tugas 1 HTML.html
@@ -20,7 +20,6 @@
         </ul>
     </p>
     <p><h2><b>Kontak Saya</b></h2></p>
-    <p><a href="http://instagram.com">Instagram|</a><a href="http://facebook.com">facebook</a></p>
-
+    <p><a href="http://instagram.com">Instagram|</a><a href="http://facebook.com">facebook|</a><a href="Portofolio.html">Portofolio</a></p>
 </body>
 </html>
