--- a/Portofolio.html
+++ b/Portofolio.html
@@ -5,22 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
+
+    <style type="text/css">
+        .nama{
+            background-color: rgb(231, 162, 210);
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif:
+        }
+        .profil{
+            background-color: rgba(146, 186, 231, 0.945);
+            font-family: 'Segoe UI';
+        }
+        .pendidikan{
+            background-color: rgba(172, 224, 111, 0.952);
+        }
+        .kontak{
+            background-color: rgba(238, 236, 103, 0.986);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        .keahlian{
+            background-color: rgba(109, 220, 235, 0.938);
+        }
+        .submit{
+            background-color: rgb(148, 194, 236);
+        }
+        .reset{
+            background-color: rgb(224, 131, 131);
+        }
+        table{
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
-    <Table border="1">
+    <Table>
         <tr>
-            <td colspan="2" align="center">
+            <td class="nama" colspan="2" align="center">
                 <img src="Pas Foto.jpg" alt="foto saya" widht="300" height="200">
                 <h2><u>Irsalina Amanda Aisyah</u></h2>
                 <h4>S1 Matematika</h4>
             </td>
         </tr>
         <tr>
-            <td>
+            <td class="profil">
                 <h3><u>Profil</u></h3>
                 <p>Saya seorang mahasiswa yang suka main dengan kucing.<br> Saya mengikuti SIB di SEAL dan sekarang sedang praktek belajar web basic.</p>
             </td>
-            <td>
+            <td class="keahlian">
                 <h3><u>Keahlian</u></h3>
                 <ul>
                     <li>Microsoft Office</li>
@@ -29,7 +60,7 @@
             </td>
         </tr>
         <tr>
-            <td>
+            <td class="pendidikan">
                 <h3><u>Pendidikan</u></h3>
                 <ul>
                     <li>Universitas Negeri Malang | 2019-Sekarang<br> S1 Matematika - Semester 7</li>
@@ -37,14 +68,14 @@
                     <li>MTs Al-Maarif Singosari | 2014-2016</li>
                 </ul>
             </td>
-            <td>
+            <td class="kontak">
                 <h3><u>Kontak</u></h3>
                 <a href="instagram.com/Irsalinaisyah">Instagram</a>
                 <br> <a href="www.facebook.com">Facebook</a>
             </td>
         </tr>
     </Table>
-    <form>
+    <form align="center">
         <p>Suka dengan profil saya</p>
         <input type="radio" name="suka" id="ya">
         <label for="ya">Ya</label>
@@ -53,8 +84,8 @@
         <p>Kritik dan Saran</p>
         <input type="text">
         <div>
-            <br><input type="submit" value="Kirim">
-            <input type="reset" value="Reset">
+            <br><input type="submit" value="Kirim" class="submit">
+            <input type="reset" value="Reset" class="reset">
         </div>
     </form>
 </body>
