--- a/Portofolio.html
+++ b/Portofolio.html
@@ -9,7 +9,7 @@
     <style type="text/css">
         .nama{
             background-color: rgb(231, 162, 210);
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif:
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
         .profil{
             background-color: rgba(146, 186, 231, 0.945);
