rename, nambah button, edit

--- a/Portofolio.html
+++ b/Portofolio.html
@@ -7,25 +7,25 @@
     <title>Portofolio</title>
 
     <style type="text/css">
-        .nama{
+        .tahun{
             background-color: rgb(231, 162, 210);
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            padding: 4pt;
         }
-        .profil{
+        .nama{
             background-color: rgba(146, 186, 231, 0.945);
-            font-family: 'Segoe UI';
+            padding: 4pt;
         }
-        .pendidikan{
+        .tugas{
             background-color: rgba(172, 224, 111, 0.952);
+            padding: 4pt;
         }
-        .kontak{
+        .omvn{
             background-color: rgba(238, 236, 103, 0.986);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
-        .keahlian{
+        .marga{
             background-color: rgba(109, 220, 235, 0.938);
         }
-        .submit{
+        .rukun{
             background-color: rgb(148, 194, 236);
         }
         .reset{
@@ -38,42 +38,42 @@
     </style>
 </head>
 <body>
+    <a href="index.html">Biodata</a>
+    <a href="#">Portofolio</a>
+
+    <h1 align="center">My Portofolio</h1>
     <Table>
-        <tr>
-            <td class="nama" colspan="2" align="center">
-                <img src="Pas Foto.jpg" alt="foto saya" widht="300" height="200">
-                <h2><u>Irsalina Amanda Aisyah</u></h2>
-                <h4>S1 Matematika</h4>
-            </td>
-        </tr>
-        <tr>
-            <td class="profil">
-                <h3><u>Profil</u></h3>
-                <p>Saya seorang mahasiswa yang suka main dengan kucing.<br> Saya mengikuti SIB di SEAL dan sekarang sedang praktek belajar web basic.</p>
-            </td>
-            <td class="keahlian">
-                <h3><u>Keahlian</u></h3>
-                <ul>
-                    <li>Microsoft Office</li>
-                    <li>Mengajar</li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <td class="pendidikan">
-                <h3><u>Pendidikan</u></h3>
-                <ul>
-                    <li>Universitas Negeri Malang | 2019-Sekarang<br> S1 Matematika - Semester 7</li>
-                    <li>MA Al-maarif Singosari | 2016-2018<br> Jurusan IPA</li>
-                    <li>MTs Al-Maarif Singosari | 2014-2016</li>
-                </ul>
-            </td>
-            <td class="kontak">
-                <h3><u>Kontak</u></h3>
-                <a href="instagram.com/Irsalinaisyah">Instagram</a>
-                <br> <a href="www.facebook.com">Facebook</a>
-            </td>
-        </tr>
+       <tr>
+        <th class="tahun">Tahun</th>
+        <th class="nama">Nama kegiatan/Organisasi</th>
+        <th class="tugas">Tugas</th>
+       </tr>
+       <tr class="omvn">
+        <td>2018</td>
+        <td>OMVN-UM</td>
+        <td><u>Sekretariat</u>
+            <p>Mendata peserta olimpiade</p>
+            <p>Mengecek kelengkapan data peserta</p>    
+            <p>Menyiapkan perlengkapan olimpiade</p>
+        </td>
+       </tr>
+       <tr class="marga">
+        <td>2019</td>
+        <td>MARGA-GERMAN</td>
+        <td><u>Sie Acara</u>
+            <p>Menyusun rundown acara</p>
+            <p>Mengatur jalannya acara mulai awal hingga akhir</p>
+        </td>
+       </tr>
+       <tr class="rukun">
+        <td>2019</td>
+        <td>RUKUN-GERMAN</td>
+        <td><u>Sie Humas</u>
+        <p>Menyiapkan surat undangan</p>
+        <p>Menyebarkan surat undangan via chat maupun langsung</p>
+        <p>Mendata setiap tamu undangan yang konfirmasi hadir</p>
+        </td>
+       </tr>
     </Table>
     <form align="center">
         <p>Suka dengan profil saya</p>
