--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <h1>Irsalina Amanda Aisyah</h1>
-    <img src="pas foto.jpg" alt="ini foto saya" widht="300" height="200">
+    <img src="Pas Foto.jpg" alt="ini foto saya" widht="300" height="200">
     <p><h2>Tentang saya</h2></p>
     <p>Saya seorang mahasiswa yang suka main dengan kucing.</p>
     <p>Saya mengikuti SIB di SEAL dan sekarang sedang praktek belajar basic coding.</p>
