--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="nav">
     <ul>
         <li><a href="#">Biodata</a></li>
-        <li><a href="portofolio.html">Portofolio</a></li>
+        <li><a href="Portofolio.html">Portofolio</a></li>
     </ul>
     </div>
 
