--- a/Portofolio.html
+++ b/Portofolio.html
@@ -31,6 +31,9 @@
         .reset{
             background-color: rgb(224, 131, 131);
         }
+        .submit{
+            background-color: aquamarine;
+        }
         table{
             margin-left: auto;
             margin-right: auto;
